# Gatekeeper

./: .gitignore  .gitmodules  CLAUDE.md  README.md  bootstrap.sh  opencode.json  package-lock.json  package.json  pytest.ini  vitest.config.js
.claude-plugin/: marketplace.json  plugin.json
.planning/: FUTURE_TICKETS.md  PROJECT.md  STATE.md  config.json
agents/: assessor.md  codebase-mapper.md  correctness-evaluator.md  debugger.md  evo-optimizer.md  evo-scout.md  executor.md  high-level-planner.md  hotspot-fusion.md  hotspot-scout.md  integration-checker.md  novelty-checker.md  phase-assessor.md  phase-plan-checker.md  phase-planner.md  phase-researcher.md  phase-verifier.md  plan-checker.md  plan-consistency-checker.md  plan-refiner.md  planner.md  project-researcher.md  task-plan-assessor.md  tester.md  tick-finder.md  timing-analyzer.md  verifier.md
commands/: autopilot.md  bridge.md  cross-team.md  cross.md  debug.md  help.md  hyperphase-hybrid.md  hyperphase-mcp.md  hyperphase-plan.md  hyperphase.md  (+9 more)
gatekeeper-mcp/: API_REFERENCE.md  README.md  TOKEN_MCP_MIGRATION.md  demo_signal_workflow_e2e.py  demo_state_file_compatibility.py  pyproject.toml  token_schema.sql
gatekeeper-mcp/src/gatekeeper_mcp/: __init__.py  __main__.py  config.py  database.py  logging_config.py  models.py  server_v3.py  signal_types.py  state_writer.py  validators.py
gatekeeper-mcp/src/gatekeeper_mcp/templates/: __init__.py  token_secret.j2  verifier_loop.md.j2
gatekeeper-mcp/src/gatekeeper_mcp/tools/: __init__.py  evolution.py  phase_gates.py  sessions.py  signals.py  tokens.py
(+206 files in other folders)
