[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper-mcp"
version = "0.1.0"
description = "Gatekeeper MCP server for Claude Code"
dependencies = [
    "fastmcp>=0.1.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
